RESOLVED FIXED19303
when -webkit-border-image has 3 image offsets, left gets top's value instead of right's
https://bugs.webkit.org/show_bug.cgi?id=19303
Summary when -webkit-border-image has 3 image offsets, left gets top's value instead ...
L. David Baron
Reported 2008-05-28 23:52:40 PDT
Per http://dev.w3.org/csswg/css3-background/#the-border-image , when the border-image property has fewer than 4 offset values, the left value (4th) is supposed to get the same value as the right (just like for CSS box properties). In WebKit SVN r34192, when three values are specified, the missing left value is filled in using the value from the top (1st) instead of the value from the right (2nd). Steps to reproduce: load attached testcase. Note that the image is random so the pixel grid is clearly visible. Expected results: left border has two image pixels in it Actual results: left border has one image pixel in it
Attachments
testcase (2.18 KB, text/html; charset=UTF-8)
2008-05-28 23:53 PDT, L. David Baron
no flags
Will land testcase from bug (768 bytes, patch)
2008-05-29 12:56 PDT, Dave Hyatt
darin: review+
L. David Baron
Comment 1 2008-05-28 23:53:08 PDT
Created attachment 21406 [details] testcase
Dave Hyatt
Comment 2 2008-05-29 12:56:55 PDT
Created attachment 21420 [details] Will land testcase from bug
Darin Adler
Comment 3 2008-05-29 12:58:39 PDT
Comment on attachment 21420 [details] Will land testcase from bug r=me, assuming a good ChangeLog and test case I'd prefer a text-only test case if possible, too.
Dave Hyatt
Comment 4 2008-05-29 13:13:57 PDT
Good point. There is no reason to make a graphical test case here.
Dave Hyatt
Comment 5 2008-06-02 14:55:29 PDT
Fixed in r34324.
Note You need to log in before you can comment on or make changes to this bug.