2008-06-02  David Hyatt  <hyatt@apple.com>

Fix for https://bugs.webkit.org/show_bug.cgi?id=19303

        When the right slice value is omitted in border-image it should use the value of the left slice and not
        the top slice.

        Reviewed by darin

        Added fast/borders/border-image-omit-right-slice.html

        * css/CSSParser.cpp:
        (WebCore::BorderImageParseContext::commitBorderImage)



Canonical link: https://commits.webkit.org/26778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34324 268f45cc-cd09-0410-ab3c-d52691b4dbfc