WebCore/css/CSSParser.cpp
@@ -3351,7 +3351,7 @@ struct BorderImageParseContext
             m_left = new CSSPrimitiveValue(m_right->getDoubleValue(), (CSSPrimitiveValue::UnitTypes)m_right->primitiveType());
         }
         if (!m_left)
-             m_left = new CSSPrimitiveValue(m_top->getDoubleValue(), (CSSPrimitiveValue::UnitTypes)m_top->primitiveType());
+             m_left = new CSSPrimitiveValue(m_right->getDoubleValue(), (CSSPrimitiveValue::UnitTypes)m_right->primitiveType());
              
         // Now build a rect value to hold all four of our primitive values.
         RefPtr<Rect> rect = new Rect;
